# HomeKitLEDStrip

./: .gitignore  CMakeLists.txt  sdkconfig
core/: CMakeLists.txt
core/Inc/: App.h  DB.h  led_strip.h
core/Src/: App.c  DB.c  app_main.c  app_wifi.c  led_strip.c
